KFileItem StatusBarText: Better resolve relative symlink path

BUG: 456198